# backend/build/swagger.json
@@ -95,6 +95,43 @@
 				},
 				"type": "object",
 				"additionalProperties": false
+			},
+			"Pick_PatchAnnotation.Exclude_keyofPatchAnnotation.id__": {
+				"properties": {
+					"dashboardId": {
+						"type": "string",
+						"description": "ID of the dashboard this annotation is attached to"
+					},
+					"content": {
+						"type": "string",
+						"description": "Actual content of the note (HTML ? Markdown ?)"
+					},
+					"filters": {
+						"type": "string",
+						"description": "JSON stringified filters"
+					},
+					"url": {
+						"type": "string",
+						"description": "URL of the dashboard"
+					},
+					"explore": {
+						"type": "string",
+						"description": "Name of the looker explore"
+					}
+				},
+				"required": [
+					"dashboardId",
+					"content",
+					"filters",
+					"url",
+					"explore"
+				],
+				"type": "object",
+				"description": "From T, pick a set of properties whose keys are in the union K"
+			},
+			"Omit_PatchAnnotation.id_": {
+				"$ref": "#/components/schemas/Pick_PatchAnnotation.Exclude_keyofPatchAnnotation.id__",
+				"description": "Construct a type with the properties of T except for those in type K."
 			}
 		},
 		"securitySchemes": {}
@@ -176,6 +213,62 @@
 						}
 					}
 				]
+			},
+			"patch": {
+				"operationId": "UpdateAnnotation",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/Annotation"
+								}
+							}
+						}
+					},
+					"404": {
+						"description": "",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"reason": {
+											"type": "string"
+										}
+									},
+									"required": [
+										"reason"
+									],
+									"type": "object"
+								}
+							}
+						}
+					}
+				},
+				"description": "Update a specific annotation",
+				"security": [],
+				"parameters": [
+					{
+						"description": "ID of the target annotation",
+						"in": "path",
+						"name": "annotationId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/Omit_PatchAnnotation.id_"
+							}
+						}
+					}
+				}
 			}
 		},
 		"/annotations": {
